Implement parent handling for subs